# CMakeRPiExample

./: CMakeLists.txt  README.md
executable/: CMakeLists.txt  main.cpp
